# ScreepsDotNet

./: .gitignore  .screepscli.sample  AGENT.md  CLAUDE.md  Directory.Build.props  GlobalSuppressions.Tests.cs  README.md  ScreepsDotNet.slnx  ScreepsDotNet.slnx.DotSettings  docker-compose.yml
.claude/docs/: coding-standards-reference.md  testing-output-capture.md
.claude/plans/: swirling-doodling-mitten.md
.github/workflows/: cli-smoke.yml  native-pathfinder.yml  parity-tests.yml  update-parity-pins.yml
ScreepsDotNet.Backend.Cli/: GlobalUsings.cs  Program.cs  ScreepsDotNet.Backend.Cli.csproj
ScreepsDotNet.Backend.Cli.Tests/: ScreepsDotNet.Backend.Cli.Tests.csproj
ScreepsDotNet.Backend.Cli.Tests/Commands/: AuthCommandTests.cs  BotCommandTests.cs  FlagCommandTests.cs  InvaderCommandTests.cs  MapCommandTests.cs  WorldCommandTests.cs  (+3 more)
ScreepsDotNet.Backend.Core/: ScreepsDotNet.Backend.Core.csproj
ScreepsDotNet.Backend.Http/: CoreEndpoints.http  IntentEndpoints.http  InvaderEndpoints.http  MapEndpoints.http  PowerCreepEndpoints.http  Program.Partial.cs  Program.cs  RegisterEndpoints.http  ScreepsDotNet.Backend.Http.csproj  ScreepsDotNet.Backend.Http.http  SpawnEndpoints.http  StrongholdEndpoints.http  SystemEndpoints.http  UserEndpoints.http  WorldEndpoints.http  appsettings.Development.json  appsettings.json  mods.sample.json
ScreepsDotNet.Backend.Http.Tests/: ScreepsDotNet.Backend.Http.Tests.csproj  TestConstants.cs
ScreepsDotNet.Common/: IntentActionType.cs
ScreepsDotNet.Driver/: .gitignore  AGENT.md  ScreepsDotNet.Driver.csproj
ScreepsDotNet.Driver.Tests/: ScreepsDotNet.Driver.Tests.csproj
ScreepsDotNet.Storage.MongoRedis/: ScreepsDotNet.Storage.MongoRedis.csproj
docs/: README.md  agents-reorganization-plan.md  agents-to-claude-migration.md  backend.md  claude-md-migration-complete.md  claude-md-migration-plan.md  cli.md  common-tasks.md  driver.md  getting-started.md  http-endpoints.md
native/pathfinder/: AGENT.md  CMakeLists.txt  README.md  build.sh  pathfinder_exports.cpp  pathfinder_exports.h  pf.cc  pf.h
src/: .editorconfig  .globalconfig  .screepscli.sample  GlobalSuppressions.Tests.cs  ScreepsDotNet.slnx  ScreepsDotNet.slnx.DotSettings  cli.ps1  cli.sh  docker-compose.yml
src/native/pathfinder/: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  pathfinder_exports.cpp  pathfinder_exports.h  pf.cc  pf.h
src/native/pathfinder/reports/: legacy-regressions.md
src/native/pathfinder/scripts/: refresh-baselines.js  run-legacy-regressions.js
(+1375 files in other folders)
